tests/cases/vectors/errors/vector-empty-untyped.ari
fn main() -> i64 {
  let values = [];
  return len(values);
}
